fixed selector changes and z-index

--- a/css/botan.css
+++ b/css/botan.css
@@ -378,9 +378,9 @@ h2[data-v-82d0a8cc],
 .dropdown[data-v-0bb70ffa],
 .name[data-v-aedb6876],
 .el-dropdown-menu--small .el-dropdown-menu__item,
-.wrap[data-v-568e7548],
+.wrap[data-v-5e514b1e],
 .overview[data-v-2cf72664] .content-wrap,
-.wrap[data-v-568e7548],
+.wrap[data-v-5e514b1e],
 .browse-wrap[data-v-4fbac4e1] .dropdown,
 .user-wrap[data-v-4fbac4e1] .dropdown,
 .site-theme-dark .quick-search.el-select .el-input.el-input__inner,
@@ -484,7 +484,7 @@ h2[data-v-82d0a8cc],
 
 /* Comicify(?) */
 .overview[data-v-2cf72664] .content-wrap,
-.wrap[data-v-568e7548],
+.wrap[data-v-5e514b1e],
 .browse-wrap[data-v-4fbac4e1] .dropdown,
 .user-wrap[data-v-4fbac4e1] .dropdown,
 .site-theme-dark .quick-search.el-select .el-input.el-input__inner,
@@ -544,7 +544,7 @@ h2[data-v-82d0a8cc],
 
 /* shadows on hover */
 .overview[data-v-2cf72664] .content-wrap:hover,
-.wrap[data-v-568e7548]:hover,
+.wrap[data-v-5e514b1e]:hover,
 .browse-wrap[data-v-4fbac4e1] .dropdown:hover,
 .user-wrap[data-v-4fbac4e1] .dropdown:hover,
 .site-theme-dark .quick-search.el-select .el-input.el-input__inner:hover,
